# ollama-tokens-per-sec

./: LICENSE  README.md  main.py  ollama-check-performance.py  prompts.csv  pyproject.toml
