[tool.poetry]
name = "ollama-tokens-per-sec"
version = "0.1.0"
description = ""
authors = ["Tom Welsh <twelsh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
requests = "^2.32.2"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
